<resources>
    <string name="app_name">CircleOn</string>

    <!--Common-->
    <string name="btn_positive">확인</string>
    <string name="btn_cancel">취소</string>

    <!--Login-->
    <string name="hint_email">학교 이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="btn_login">로그인</string>
    <string name="btn_send_change_password_screen">비밀번호를 잊으셨나요?</string>
    <string name="btn_send_sign_up_screen">회원가입</string>

    <!--Sign Up-->
    <string name="title_sign_up">회원가입</string>
    <string name="btn_next">다음 단계로</string>
    <string name="btn_sign_up">회원가입하기</string>
    <string name="btn_authenticate">인증하기</string>
    <string name="btn_agree_all_terms">전체동의</string>
    <string name="btn_show_detail"><u>보기</u></string>
    <string name="content_title_service_terms">(필수) 서비스 이용약관</string>
    <string name="content_title_privacy_policy">(필수) 개인정보 처리방침 동의</string>
    <string name="content_title_community_rules">(필수) 커뮤니티 이용규칙 확인</string>
    <string name="sign_up_content_title_1">반가워요! 이름을 알려주세요</string>
    <string name="info_content_title_1">실명이 아닐 경우 동아리 가입이 제한될 수 있어요</string>
    <string name="sign_up_content_title_2">학교 이메일 인증이 필요해요</string>
    <string name="sign_up_content_title_3">이메일로 인증번호를 전송했어요</string>
    <string name="sign_up_content_title_4">비밀번호를 설정해주세요</string>
    <string name="sign_up_content_title_5">약관 동의가 필요해요</string>
    <string name="message_authentication_fail">*인증을 완료해주세요</string>
    <string name="message_password_check_fail">*비밀번호가 일치하지 않습니다</string>
    <string name="text_name">이름</string>
    <string name="hint_name">이름 입력</string>
    <string name="text_school_email">학교 이메일</string>
    <string name="hint_school_email">이메일 입력</string>
    <string name="text_email_authentication_code">인증번호</string>
    <string name="hint_email_authentication_code">인증번호 입력</string>
    <string name="info_email_no_authentication_code">혹시 인증번호가 전송되지 않았나요?</string>
    <string name="btn_resend_authentication_code">다시 전송하기</string>
    <string name="text_password">비밀번호</string>
    <string name="condition_password">*영문, 숫자, 특수문자 포함 8~12자</string>
    <string name="text_password_check">비밀번호 확인</string>
    <string name="hint_password_check">비밀번호 입력</string>
    <string name="site_service_terms">https://bitter-pink-ac9.notion.site/22b4609ab703809e8995daada6f6da6b?source=copy_link</string>
    <string name="site_privacy_policy">https://bitter-pink-ac9.notion.site/22b4609ab70380799ff0c45b19879ae5?source=copy_link</string>
    <string name="site_community_rules">https://bitter-pink-ac9.notion.site/22b4609ab7038029b374f930c8f85ac5?source=copy_link</string>

    <!--Change Password-->
    <string name="title_change_password">비밀번호 재설정</string>
    <string name="btn_change_password">완료</string>
    <string name="change_password_content_title_1">학교 이메일 주소를 입력해주세요</string>
    <string name="change_password_content_title_2">이메일로 인증번호를 전송했어요</string>
    <string name="change_password_content_title_3">비밀번호를 설정해주세요</string>

    <!--Tab-->
    <string name="tab_name_home">홈</string>
    <string name="tab_name_calendar">캘린더</string>
    <string name="tab_name_circle">동아리</string>
    <string name="tab_name_direct_message">채팅</string>
    <string name="tab_name_my_page">MY</string>
    <string name="message_service_error">앗! 다시 시도해볼까요?</string>
    <string name="message_not_released">아직 준비중인 기능이에요</string>

    <!--Home-->
    <string name="home_content_title_new_circle">새로 개설된 동아리를 소개합니다!</string>
    <string name="home_content_title_circle_default">이런 동아리는 어떠신가요?</string>
    <string name="home_content_title_circle">"%s 님 이런 동아리는 어떠신가요?"</string>
    <string name="message_no_circle">등록된 동아리가 없어요</string>
    <string name="message_finish_waiting">종료를 원하시면 \'뒤로\'버튼을 한번 더 눌러주세요</string>

    <!--Search Circle-->
    <string name="message_no_result">검색 결과가 존재하지 않아요</string>
    <string name="hint_search_circle">동아리 검색</string>

    <!--Circle Detail-->
    <string name="btn_request_join_circle">가입신청</string>
    <string name="btn_delete">삭제하기</string>
    <string name="text_circle_join_requested">대기중</string>
    <string name="menu_circle_settings_edit">수정하기</string>
    <string name="menu_circle_settings_manage">관리하기</string>
    <string name="menu_circle_settings_request_leave">탈퇴하기</string>
    <string name="menu_report">신고하기</string>
    <string name="title_report_dialog">신고하시려는 이유가 무엇인가요?</string>
    <string name="tab_name_introduction">소개글</string>
    <string name="tab_name_notice">공지사항</string>
    <string name="tab_name_post">게시글</string>
    <string name="tab_name_activity_photo">활동사진</string>
    <string name="message_not_member">동아리 멤버에게만\n공개된 컨텐츠에요!</string>
    <string name="message_no_notice">등록된 공지사항이 없어요</string>
    <string name="message_no_post">등록된 게시글이 없어요</string>
    <string name="message_already_leave_requested">탈퇴 요청이 진행중이에요</string>
    <string name="underlined_number">&lt;u>%d&lt;/u></string>

    <!--Circle Detail Introduction-->
    <string name="text_recruitment_date">모집기간</string>
    <string name="message_no_recruitment">현재 모집기간이 아니에요</string>

    <!--Circle Detail Post,Notice-->
    <string name="menu_post_settings_pin">고정하기</string>
    <string name="menu_post_settings_remove_pin">고정 해제하기</string>
    <string name="menu_post_settings_edit">수정하기</string>
    <string name="menu_post_settings_delete">삭제하기</string>
    <string name="message_delete_notice">공지사항을 삭제할까요?</string>
    <string name="message_delete_post">게시글을 삭제할까요?</string>

    <!--Upload Circle-->
    <string name="title_upload_circle">동아리 생성</string>
    <string name="title_edit_circle">동아리 수정</string>
    <string name="btn_upload">생성하기</string>
    <string name="text_circle_name">이름</string>
    <string name="hint_circle_name">동아리 이름</string>
    <string name="text_circle_single_line_introduction">한 줄 소개</string>
    <string name="hint_circle_single_line_introduction">동아리를 한 줄로 간단하게 소개해 주세요</string>
    <string name="text_circle_introduction">동아리 소개글</string>
    <string name="hint_circle_introduction">사람들에게 가장 먼저 보여지는 글입니다. 자유롭게 동아리를 소개해 주세요!</string>
    <string name="text_circle_introduction_image">소개글 이미지</string>
    <string name="tip_circle_introduction_image">동아리 홍보 포스터를 추천드려요!</string>
    <string name="text_circle_category">동아리 카테고리</string>

    <!--Manage Circle-->
    <string name="title_manage_circle">동아리 관리</string>
    <string name="manage_circle_title_circle_member">동아리 멤버</string>
    <string name="manage_circle_title_approve_circle_join">동아리 가입 승인</string>
    <string name="manage_circle_title_approve_circle_leave">동아리 탈퇴 승인</string>
    <string name="manage_circle_title_request_official_status">동아리 인증 뱃지\n신청하기</string>
    <string name="manage_circle_title_delete_circle">동아리 삭제하기</string>
    <string name="manage_circle_content_circle_member_default">멤버 0명</string>
    <string name="manage_circle_content_circle_member">멤버 %d명</string>
    <string name="manage_circle_content_join_requested_member_default">대기중인 멤버 0명</string>
    <string name="manage_circle_content_join_requested_member">대기중인 멤버 %d명</string>
    <string name="manage_circle_content_leave_requested_member_default">대기중인 멤버 0명</string>
    <string name="manage_circle_content_leave_requested_member">대기중인 멤버 %d명</string>
    <string name="message_no_circle_member">등록된 멤버가 없어요</string>
    <string name="message_no_member_join_requested">가입 대기중인 인원이 없어요..</string>
    <string name="message_no_member_leave_requested">탈퇴 대기중인 인원이 없어요!</string>
    <string name="message_request_ban_member">%s 님을 추방할까요?</string>
    <string name="message_request_official_status">교내 정식 동아리 인증을 받으시겠어요?(3~5일 소요)</string>
    <string name="message_delete_circle">동아리를 삭제하시겠어요?</string>
    <string name="menu_circle_member_settings_edit_role">역할 수정하기</string>
    <string name="menu_circle_member_settings_ban">추방하기</string>
    <string name="btn_edit_circle_member_role">임명하기</string>
    <string name="btn_reject_join_request">거절하기</string>
    <string name="btn_accept_join_request">수락하기</string>
    <string name="btn_show_member_join_message">상세 보기</string>
    <string name="btn_show_member_leave_message">사유 보기</string>
    <string name="btn_ban_member">추방하기</string>
    <string name="btn_request">신청하기</string>
    <string name="title_member_message_dialog_for_join_accept">%s님은 자신을 이렇게 소개해주셨어요</string>
    <string name="title_member_message_dialog_for_leave_accept">%s님이 이런 탈퇴 사유를 남겨주셨어요</string>
    <string name="title_member_leave_message_dialog">탈퇴 사유를 알려주세요!</string>
    <string name="title_member_join_message_dialog">내 자신을 어필해 볼까요?</string>
    <string name="btn_accept_leave_request">승인하기</string>
    <string name="btn_join_request">신청하기</string>
    <string name="btn_leave_request">탈퇴하기</string>

    <!--Post Detail-->
    <string name="hint_comment">댓글을 입력해주세요.</string>
    <string name="title_edit_comment_dialog">댓글 수정하기</string>
    <string name="title_post_detail">게시글 상세보기</string>
    <string name="title_notice_detail">공지사항 상세보기</string>
    <string name="message_delete_comment">댓글을 삭제할까요?</string>

    <!--Upload Post-->
    <string name="title_upload_post">게시글 작성</string>
    <string name="title_upload_notice">공지사항 작성</string>
    <string name="title_edit_post">게시글 수정</string>
    <string name="title_edit_notice">공지사항 수정</string>
    <string name="btn_finish">완료</string>
    <string name="btn_save_edit">저장</string>
    <string name="hint_post_content">내용을 입력하세요.</string>
    <string name="add_image">사진 추가하기</string>

    <!--Circle-->
    <string name="circle_content_title_my_circle">나의 동아리</string>
    <string name="circle_content_title_join_requested_circle">동아리 가입 신청 목록</string>
    <string name="circle_content_title_leave_requested_circle">동아리 탈퇴 신청 목록</string>
    <string name="circle_content_title_upload_circle">동아리\n생성하기</string>
    <string name="circle_content_my_circle_default">가입중인 동아리 0개</string>
    <string name="circle_content_my_circle">가입중인 동아리 %d개</string>
    <string name="circle_content_requested_circle_default">대기중인 동아리 0개</string>
    <string name="circle_content_requested_circle">대기중인 동아리 %d개</string>

    <!--My Circle-->
    <string name="btn_move_to_search_circle_screen">둘러보러 가기</string>
    <string name="btn_cancel_join_request">가입 취소</string>
    <string name="message_no_my_circles">앗! 아직 가입하신 동아리가 없어요</string>
    <string name="message_no_join_requested_circles">가입 대기중인 동아리가 없어요!</string>
    <string name="message_no_leave_requested_circles">탈퇴 대기중인 동아리가 없어요!</string>
    <string name="message_cancel_join_request">가입 신청을 취소하시겠어요?</string>

    <!--My Page-->
    <string name="title_my_page">마이페이지</string>
    <string name="my_page_title_my_posts">내가 쓴\n게시글 보기</string>
    <string name="my_page_title_my_comment_posts">내가 댓글 단\n게시글 보기</string>
    <string name="text_app_version">앱 버전</string>
    <string name="text_service_term">서비스 이용 약관</string>
    <string name="text_privacy_policy">개인정보 처리 방침</string>
    <string name="text_community_rules">커뮤니티 이용규칙</string>
    <string name="btn_send_feedback">피드백 남기기</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_resign">탈퇴하기</string>
    <string name="message_set_user_profile_image">프로필 이미지를 설정하시겠어요?</string>
    <string name="message_remove_user_profile_image">프로필 이미지를 삭제할까요?</string>
    <string name="message_user_logout">로그아웃하시겠어요?</string>
    <string name="message_user_resign">정말 회원을 탈퇴하시겠어요?</string>
    <string name="version_name">v%s</string>

    <!--MY Post-->
    <string name="title_my_post">내가 쓴 게시글</string>
    <string name="title_my_comment_post">내가 댓글 단 게시글</string>
    <string name="message_no_my_posts">앗! 아직 작성하신 게시글이 없어요</string>
    <string name="message_no_my_comment">앗! 아직 작성하신 댓글이 없어요</string>

</resources>
