<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_graph_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_name_home"/>
    <item
        android:id="@+id/nav_graph_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/tab_name_calendar"/>
    <item
        android:id="@+id/nav_graph_circle"
        android:icon="@drawable/ic_circle"
        android:title="@string/tab_name_circle"/>
    <item
        android:id="@+id/nav_graph_direct_message"
        android:icon="@drawable/ic_direct_message"
        android:title="@string/tab_name_direct_message"/>
    <item
        android:id="@+id/nav_graph_my_page"
        android:icon="@drawable/ic_my_page"
        android:title="@string/tab_name_my_page" />
</menu>
