<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.screen.login.SignUpPasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_padding_large"
        android:text="@string/content_title_3"
        android:textAppearance="@style/content_title"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_large"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_password"
                android:textSize="@dimen/text_size_small"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPasswordValidation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:text="@string/condition_password"
                android:textColor="@color/grey_6"
                android:textSize="@dimen/text_size_small"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_large"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_password_check"
            android:textColorHint="@color/grey_7"
            android:textSize="@dimen/text_size_default"
            android:backgroundTint="@drawable/selector_edit_text"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_large"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_password_check"
                android:textSize="@dimen/text_size_small"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPasswordCheckValidation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/error"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPasswordCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_large"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="number"
            android:hint="@string/text_password_check"
            android:textColorHint="@color/grey_7"
            android:textSize="@dimen/text_size_default"
            android:backgroundTint="@drawable/selector_edit_text"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
