<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_padding_default"
    android:paddingHorizontal="@dimen/margin_padding_large"
    android:background="@color/grey_1"
    tools:context=".view.screen.home.SearchCricleFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llSearchCircle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:background="@drawable/bg_rounded_grey_rectangle">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_small"
                android:src="@drawable/ic_search"
                app:tint="@color/grey_6"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtSearchCircle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="@dimen/margin_padding_x_small"
                android:hint="@string/hint_search_circle"
                android:textSize="@dimen/text_size_default"
                android:textColor="@color/grey_9"
                android:textColorHint="@color/grey_5"
                android:maxLines="1"
                android:background="@null"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/margin_padding_small"
                android:src="@drawable/ic_clear"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/margin_padding_small"
            android:gravity="center_vertical"
            android:text="@string/btn_cancel"
            android:textColor="@color/grey_6"
            android:textSize="@dimen/text_size_default"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_padding_small"
        app:layout_constraintTop_toBottomOf="@id/llSearchCircle"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCircle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNoResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/message_no_result"
            android:textColor="@color/grey_6"
            android:visibility="gone"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pgbLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:indicatorColor="@color/grey_5"
            app:trackColor="@color/grey_3"
            app:trackThickness="1dp"
            android:indeterminate="true"
            android:visibility="gone"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llServiceError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_service_error"
                android:textAppearance="@style/large_bold_text"
                android:textColor="@color/grey_5"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:src="@drawable/ic_retry"
                android:clickable="true"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
